--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,53 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 include(FetchContent)
 
 FetchContent_Declare(
-    ftxui
-    GIT_REPOSITORY https://github.com/ArthurSonzogni/FTXUI.git
-    GIT_TAG main
+  ftxui
+  GIT_REPOSITORY https://github.com/ArthurSonzogni/FTXUI.git
+  GIT_TAG        main
 )
 FetchContent_MakeAvailable(ftxui)
 
-add_executable(todolist main.cpp)
+# --------------------------------------------------
+# 1) Gather your sources and headers in src/
+# --------------------------------------------------
+# (you don’t strictly need the headers in the target’s
+# source list, but some IDEs like to see them)
+file(GLOB_RECURSE SRC_FILES
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
+)
+file(GLOB_RECURSE HDR_FILES
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h"
+)
 
-target_compile_options(todolist PRIVATE -g -Wall)
+# --------------------------------------------------
+# 2) Define the executable with ALL your code
+# --------------------------------------------------
+add_executable(todolist
+  main.cpp
+  ${SRC_FILES}
+  ${HDR_FILES}
+)
 
-target_link_libraries(todolist PRIVATE ftxui::screen ftxui::dom ftxui::component)
+# --------------------------------------------------
+# 3) Make sure the compiler can find your headers
+# --------------------------------------------------
+target_include_directories(todolist
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+)
+
+# --------------------------------------------------
+# 4) FTXUI flags and libraries
+# --------------------------------------------------
+target_compile_options(todolist
+  PRIVATE
+    -g
+    -Wall
+)
+
+target_link_libraries(todolist
+  PRIVATE
+    ftxui::screen
+    ftxui::dom
+    ftxui::component
+)
